# scgpt-age

./: .gitignore  README.md  main.py  pyproject.toml
src/: calculate_gene_statistics.py  perturbation_analysis.py  train_scgpt.py  train_scgpt_diffexpressed_genes.py  train_scgpt_random_genes.py  train_scgpt_subset.py
